<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dreamy_green_background"
    tools:context=".MenuPrincipalAdmin">

    <Button
        android:id="@+id/button_envases"
        android:layout_width="182dp"
        android:layout_height="83dp"
        android:text="@string/envases"
        app:icon="@drawable/bottles_icon"
        app:iconSize="40dp"
        app:layout_constraintBottom_toTopOf="@+id/button_fiar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.84" />

    <Button
        android:id="@+id/button_salir"
        android:layout_width="152dp"
        android:layout_height="68dp"
        android:backgroundTint="@color/design_default_color_error"
        android:text="@string/salir"
        app:icon="@android:drawable/ic_menu_close_clear_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.88" />

    <Button
        android:id="@+id/button_fiar"
        android:layout_width="182dp"
        android:layout_height="83dp"
        android:layout_marginTop="72dp"
        android:text="@string/fiar"
        app:icon="@drawable/fiar_icon"
        app:iconSize="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_gestion_inventario"
        app:layout_constraintVertical_bias="0.393" />

    <Button
        android:id="@+id/button_gestion_inventario"
        android:layout_width="182dp"
        android:layout_height="83dp"
        android:layout_marginTop="140dp"
        android:text="@string/gesti_n_de_inventario"
        app:icon="@drawable/inventory_icon"
        app:iconSize="40dp"
        app:iconTintMode="multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_gestion_clientes"
        android:layout_width="182dp"
        android:layout_height="83dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="12dp"
        android:text="@string/gesti_n_de_clientes"
        app:icon="@drawable/client_icon"
        app:iconSize="40dp"
        app:layout_constraintEnd_toStartOf="@+id/button_gestion_inventario"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>